# templateCpp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CompilerOptions.cmake  OutputDirectories.cmake  QtDeploy.cmake  Win32DeployQt.cmake
demo/: CMakeLists.txt
demo1/: CMakeLists.txt
demo2/: CMakeLists.txt
demo2/src/: main.cpp
gl-demo/: CMakeLists.txt
gl-demo/example/: CMakeLists.txt
gl-demo/test/: CMakeLists.txt
libs/: CMakeLists.txt
qt-demo/: CMakeLists.txt
qt-demo/example/: CMakeLists.txt
qt-demo/resources/: shader.qrc
qt-demo/resources/shader/: fragment.glsl  vertex.glsl
qt-demo/test/: CMakeLists.txt
